# Day-One

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
scripts/: backup_db.sh
src/: bot.py  config.py  database.py  db_helpers.py  schema.sql  tests.py
src/commands/: command_helpers.py  dev.py  groups.py  help.py  user.py  user_settings.py
src/services/: group_logic.py  timezone_onboarding.py
src/tests/: conftest.py
src/tests/integration/: test_checkin_database_flow.py  test_group_database_flow.py  test_timezone_database_flow.py
src/tests/unit/: test_command_helpers.py  test_group_logic.py  test_streak_logic.py  test_time.py  test_timezone_onboarding.py
src/utils/: command_helpers.py  getters.py  logger.py  time.py
